# PatientIQ

./: .env.example  .gitignore  AGENTS.md  ENV_SETUP.md  Makefile  README.md  ai_services.md  pyproject.toml  requirements.txt  test_connection.py  testbranch.md
agents/: AGENTS.md  research_agent.py
agents/pulmonary_research_agent/: .agentcignore  .gitignore  README.md  compat.py  edge.py  graph.py  main.py  node.py  pyproject.toml  server.py  verify_setup.py
backend/: agents_agentc.py  api.py  create_indexes.py  database.py  models.py  seed_database.py  testdb_connection.py  verify_setup.py
data/: data.md
frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
functions/: functions.md  pii_mask.sqlppnb  sentiment.sqlppnb
githooks/: pre-commit  pre-push
indexes/: indexes.md
prompts/: docnotes_search_agent.yaml  doctor_notes_buddy_agent.yaml  medical_researcher.yaml  message_router_agent.yaml  message_routing_agent.yaml  previsit_summarizer_agent.yaml  pulmonary_research_agent.yaml  questionnaire_summarizer_agent.yaml  research_summarizer_agent.yaml  simple_prompt.yaml  wearable_alerting_agent.yaml  wearable_analytics_agent.yaml  wearable_monitor_agent.yaml
scripts/: README.md  generate_enhanced_wearable_data.py  install_git_hooks.sh  load_wearable_data.py  populate_wearable_vectors.py  test_llm_endpoint.py  test_llm_endpoint.sh
tools/: README.md  _shared.py  analyze_wearable_trends.py  appointments_by_patient_id_date_range.sqlpp  appointments_upcoming_by_doctor_id.sqlpp  compare_patient_to_cohort.py  connect_symptoms_to_research.py  doc_notes_search.py  doc_notes_search.yaml  doc_notes_search_semantic.yaml  docnotes_by_patient_id_date_range.sqlpp  docnotes_by_visitdate.sqlpp  docnotes_latest_by_patient_id.sqlpp  docnotes_recent_by_doctor_id.sqlpp  docnotes_recent_by_patient_id.sqlpp  doctor_notes_tools.py  find_condition_by_patient_id.sqlpp  find_conditions_by_patient_id.py  find_patient_by_id.py  find_patient_by_id.sqlpp  find_patients_by_id.sqlpp  find_similar_patients_demographics.py  find_similar_patients_vector.py  generate_rag_recommendations.py  get_previsit_questionnaire.py  get_wearable_data_by_patient.py  hello_tool.py  message_tools.py  messages_private_inbox_by_doctor_id.sqlpp  messages_public_recent.sqlpp  paper_search.py  paper_search.yaml  paper_search_semantic.yaml  patient_data_tools.py  patientnotes_recent_by_patient_id.sqlpp  patients_by_doctor.sqlpp  patients_search_by_name.sqlpp  questionnaire_tools.py  research_tools.py  tavily_openapi.yaml  (+2 more)
tracing/: test.py
workbooks/: Notes.sqlppnb  Research.sqlppnb  Wearables.sqlppnb
(+114 files in other folders)
