[project]
name = "cko"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "agentc[langchain,langgraph,llamaindex]>=1.0.0",
  "couchbase",
  "fastapi>=0.125.0",
  "langchain>=0.3.27",
  "langchain-openai>=0.3.35",
  "openai>=1.0.0",
  "python-dotenv",
  "ragas",
  "sentence-transformers",
  "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "flake8",
  "pdoc",
  "ruff",
]

notebooks = [
  "ipykernel>=6.0.0",
  "jupyterlab>=4.0.0",
]

[tool.uv]
managed = true

[tool.flake8]
max-line-length = 100
extend-exclude = [
  ".venv",
  "venv",
  "__pycache__",
]

[tool.ruff]
line-length = 100
extend-exclude = [
  ".venv",
  "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
